# rl-cookbook

./: .gitignore  README.md  TODO.md  pyproject.toml
examples/cartpole/: ppo_clip.py  ppo_penalty.py  trpo.py  vpg.py  vpg1.py  vpg_gae.py
examples/lunar_lander_continuous/: core.py  ddpg.py  td3.py
examples/lunarlander_continuous/: core.py  ddpg.py  td3.py
examples/pendulum/: core.py  ddpg.py  sac.py  td3.py
examples/pong/: ppo_clip.py
rl/: loops.py  metrics.py  replay_buffer.py  utils.py  utils_test.py
rl/agents/: alpha_zero.py  ddpg.py  ppo_clip.py  ppo_penalty.py  sac.py  td3.py  trpo.py  vpg.py  vpg_gae.py
rl/agents/ddpg/: ddpg.py
rl/agents/ppo/: ppo_clip.py  ppo_penalty.py
rl/agents/sac/: sac.py
rl/agents/td3/: td3.py
rl/agents/vpg/: vpg.py  vpg1.py  vpg_gae.py
rl/environments/: two_player_game.py
rl/metrics/: average_episode_length.py  average_return.py  core.py
zoo/: utils.py
zoo/cartpole/: core.py  ppo_clip.py  ppo_penalty.py  trpo.py  vpg.py  vpg_gae.py
zoo/connect_4/: alpha_zero.py  core.py
zoo/lunar_lander_continuous/: core.py  ddpg.py  td3.py
zoo/pendulum/: core.py  ddpg.py  sac.py  td3.py
zoo/pong/: core.py  ppo_clip.py
zoo/tic_tac_toe/: alpha_zero.py  core.py
zoo/two_zero_four_eight/: core.py
