[tool.poetry]
name = "rl-cookbook"
version = "0.1.0"
description = "Collection of RL algorithms and solutions to various environments"
authors = ["Akshay Kurmi <akskurmi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.*"
tensorflow = "^2.4.1"
tqdm = "^4.59.0"
tensorflow-probability = "^0.12.1"
gym = {extras = ["atari"], version = "^0.18.0"}

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
